force-app/main/default/objects/FACS_DistrList__c/FACS_DistrList__c.object-meta.xml
<CustomObject>
    <description>TMZ/Annonsement distribution lists</description>
    <label>DL</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>FACS_DL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Distribution Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>