force-app/main/default/objects/FACS_DistrList__c/fields/FACS_Active__c.field-meta.xml
<CustomField>
    <fullName>FACS_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active ?</label>
    <type>Checkbox</type>
</CustomField>