force-app/main/default/objects/FACS_DistrList__c/fields/FACS_DL_Email__c.field-meta.xml
<CustomField>
    <fullName>FACS_DL_Email__c</fullName>
    <description>Email Address for Affiliate stations</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Affiliate Email</label>
    <type>Email</type>
</CustomField>