force-app/main/default/objects/FACS_DistrList__c/fields/FACS_DL_Email_REF__c.field-meta.xml
<CustomField>
    <fullName>FACS_DL_Email_REF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Affiliate Station</label>
    <length>100</length>
    <type>Text</type>
</CustomField>