force-app/main/default/objects/FACS_DistrList__c/fields/FACS_DL_Type__c.field-meta.xml
<CustomField>
    <fullName>FACS_DL_Type__c</fullName>
    <defaultValue>&quot;TMZ&quot;</defaultValue>
    <description>Channel or Network (FBC and TMZ)</description>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TMZ</fullName>
            </value>
            <value>
                <fullName>FBC Announsement</fullName>
                <label>FBC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>