force-app/main/default/objects/FACS_DistrList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FACS_DL_Type__c</columns>
    <columns>FACS_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>